src/objects/Community_Events__c.object
<CustomObject>
    <description>Used to store Events in the Community.  Events may or may not be associated with a Group.</description>
    <fields>
        <fullName>Building__c</fullName>
        <description>Used to store the building name where the Event is taking place, if any.</description>
        <label>Building</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Provide a City for the Community Event Location</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Provide an email address to contact for more information about the Community Event.</description>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <description>Provide a contact phone number for details about the Community Event</description>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Provide a description of the Community Event details and RSVP instructions (if any)</description>
        <label>Description</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <description>End Date/Time of the Community Event</description>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_SF_ID__c</fullName>
        <description>Represents the Salesforce 18 Digit Unique ID for the Event record.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the Salesforce 18 Digit Unique ID for the Event record.</inlineHelpText>
        <label>Event SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Used to define a name for the event.  This field is mandatory.</description>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field drives whether the Community Event record is discoverable by other users in the Community who are not part of the group who created it.</description>
        <inlineHelpText>If you check this box, the Event will be discoverable to all users in the Community.</inlineHelpText>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <description>Use this to provide a room number for your event, if known.</description>
        <label>Room</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <description>Start Date/Time of the Community Event Record</description>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Provide a State for the Community Event location</description>
        <label>State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Provide a street address (number, street) for the Community Event location</description>
        <label>Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teaser__c</fullName>
        <description>Provide a teaser description for the Event, to be displayed on the Event Listing page within the Community.</description>
        <inlineHelpText>The Teaser is shown on the Event Listing page for Events that are flagged as Public.</inlineHelpText>
        <label>Teaser</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Provide a URL to additional event details or an RSVP page hosted on another site.</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Provide a Zip Code/Postal Code of the Community Event location</description>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Community Event</label>
    <listViews>
        <fullName>All_Events</fullName>
        <columns>Name__c</columns>
        <columns>NAME</columns>
        <columns>Public__c</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <columns>Teaser__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Events</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Past_Events</fullName>
        <columns>Name__c</columns>
        <columns>NAME</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <columns>Teaser__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Past Events</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Todays_Events</fullName>
        <columns>Name__c</columns>
        <columns>NAME</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <columns>Teaser__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Events</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Upcoming_Events</fullName>
        <columns>Name__c</columns>
        <columns>NAME</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <columns>Teaser__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Upcoming Events</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EVENT.{yy}{mm}{0}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Event_End_Less_Or_Equal_Than_Start</fullName>
        <active>true</active>
        <description>Event_End_Less_Or_Equal_Than_Start</description>
        <errorConditionFormula>Start__c   &gt;=   End__c</errorConditionFormula>
        <errorMessage>The end date must be greater than the start date.</errorMessage>
    </validationRules>
</CustomObject>